# elfutils

libasm/: asm_end.c
libdwfl/: dwfl_error.c
libelf/: elf_update.c
libgnu/: ChangeLog  Makefile.am  ar.in.h  basename-gnu.c  byteswap.in.h  endian.in.h  features.in.h  fts.in.h  gnulib.am  mman_win32.c  stat-time.h  stdio_ext.in.h  sys_mman.win32.h  sysconf_win32.c  tdestroy.c
mingw64/: config.h  config.status
src/: ar.c  elfcompress.c  ranlib.c  srcfiles.cxx  strings.c  strip.c
